[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
    {name = "Mike Lezhnin", email = "mike239x@gmail.com"},
]
description = "E"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",    
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
